--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "WarningBeforeUnload",
+  "name": "warning-before-unload",
   "version": "1.0.0",
   "description": "Alerts the user when leaving a page without saving the changes.",
   "main": "WarningBeforeUnload.js",
